# DistMLIP

./: .gitignore  README.md  nohup.out  prealloc.ipynb  pyproject.toml  setup.cfg  setup.py  test.ipynb
DistMLIP/: __init__.py
DistMLIP/distributed/: dist.py  fpis.c  fpis.h  subgraph_creation_fast.c  subgraph_creation_utils.c  subgraph_creation_utils.h
DistMLIP/implementations/mace/: __init__.py  mace.py  mace_utils.py  models.py
DistMLIP/implementations/matgl/: __init__.py  ase.py  pes.py
DistMLIP/implementations/matgl/models/: __init__.py  chgnet.py  chgnet_layers.py  tensornet.py
DistMLIP/implementations/uma/: ase_calculator.py  compute.py  escn_md.py
examples/: chgnet_example.ipynb  mace_example.ipynb  tensornet_example.ipynb  test_consistency.ipynb  testing.ipynb  traj.trj  uma_example.ipynb
