[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy>=1.26.3"]
build-backend = "setuptools.build_meta"

[project]
name = "DistMLIP"
version = "0.1.0"
authors = [
    { name = "Kevin Han" },
    { name = "Bowen Deng" }
]
description = "DistMLIP is a fast, efficient, distributed inference library for graph-based machine learning interatomic potentials. DistMLIP supports ultra-fast and ultra-large scale atomistic simulation."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "Apache" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.3"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
matgl = [
    "matgl @ git+https://github.com/materialsvirtuallab/matgl.git@5171392",
]
mace = [
    "mace-torch @ git+https://github.com/ACEsuit/mace.git@e4d0a4e35f7d41bca83374e22b4f03adf3cd98e0",
    "pymatgen"
]
fairchem = [
    "fairchem-core @ git+https://github.com/facebookresearch/fairchem.git@26c55cb75d9e9d07b6d973dda0b4f119ddf62860#subdirectory=packages/fairchem-core"
]

[tool.setuptools.packages.find]
where = ["."]
