[metadata]
name = DistMLIP
version = 0.1.0
author = Kevin Han, Bowen Deng
description = DistMLIP is a fast, efficient, distributed inference platform for graph-based machine learning interatomic potentials. DistMLIP supports ultra-fast and ultra-large scale atomistic simulation.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: C
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires = 
    numpy >= 1.26.3
    matgl == 1.2.6

[options.packages.find]
where = .

[build_ext]
inplace = 0
